--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>wisata Semarang</title>
+  <link rel="icon" href="assets/logo.jpeg" type="image/png">
+
   <style>
     /* ========== GLOBAL STYLE ========== */
     body {
